2011-05-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Replace the symbol `us-ascii' for a
	coding-system with `iso-safe', which is valid even on Emacs21.
	(twittering-ensure-ca-cert): use `iso-safe' instead of `us-ascii'
	as a coding-system for ASCII.
	(twittering-start-http-session-curl-https-p): likewise.
	(twittering-initialize-global-variables-if-necessary): likewise.

	* twittering-mode.el: Add some directories for Emacs21 to
	`load-path' even when byte-compiling the file on Emacs21.

2011-04-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* NEWS, NEWS.ja, LAST-VERSION, VERSION, doc/web/index.text:
	Version 2.0.0 released.

	* twittering-mode.el: Fix coding system for some operations so
	that they work well even if the default coding system is
	`utf-16le-dos'. Thanks to Moto_Dong who reported the problem.
	(twittering-ensure-ca-cert): explicitly specify coding-system.
	(twittering-start-http-session-curl-https-p): likewise.
	(twittering-read-from-encrypted-file): likewise.
	(twittering-write-and-encrypt): likewise.
	(twittering-load-icon-properties): likewise.
	(twittering-initialize-global-variables-if-necessary): likewise.
	(twittering-status-not-blank-p): likewise.

2011-04-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix headers for a proxy.
	(twittering-make-connection-info): extract proxy information from
	`connection-info' instead of directly referring to
	`twittering-http-proxy-user', `twittering-http-proxy-password',
	etc.
	(twittering-send-http-request-native): generate the
	"Proxy-Authorization" header correctly and give the absolute URI
	as the request URI when the connection is peformed via a proxy.
	(twittering-send-http-request-urllib): add "Proxy-Authorization"
	header if necessary.
	(twittering-http-application-headers): do not add headers related
	to a proxy. They are added in functions for each connection
	method.

	* twittering-mode.el: "U" pushes a URI of a tweet on text without
	a uri property.